# rebake

./: .gitignore  .gitmodules  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  README_ja.md  justfile  pyproject.toml
python/: Cargo.toml  README.md  mkdocs.yml  pyproject.toml
python/docs/: index.md
python/docs/api/: analysis.md  core.md  decode.md  encode.md  enrich.md  exceptions.md  index.md  ingest.md  pipeline.md  synchronize.md  transform.md
python/docs/getting-started/: installation.md  quickstart.md
python/docs/stylesheets/: extra.css
python/examples/: rosbag_to_lerobot.py  rosbag_to_lerobot_with_context.py
python/rebake/: __init__.py  _internal.pyi  exceptions.py
python/rebake/analysis/: __init__.py  episodes.py  export_bundle.py  segments.py  timestamps.py  topics.py
python/rebake/common/: __init__.py
python/rebake/core/: __init__.py  context.py
python/rebake/decode/: __init__.py  video_decoder.py
python/rebake/encode/: __init__.py  depth_video_encoder.py  image_encoder.py  video_encoder.py
python/rebake/enrich/: __init__.py  delta_joint_position_enricher.py  delta_transform_enricher.py  hand_command_enricher.py  head_command_enricher.py  shift_enricher.py  tf_buffer_enricher.py  tf_chain_enricher.py  uuid_enricher.py
python/rebake/export/: __init__.py  parquet_video_exporter.py
python/rebake/ingest/: __init__.py  rosbag1_ingestor.py  rosbag2_ingestor.py  utils.py
python/rebake/merge/: __init__.py
python/rebake/pipeline/: __init__.py
python/rebake/synchronize/: __init__.py  nearest_neighbor_time_synchronizer.py  zero_order_hold_time_synchronizer.py
python/rebake/transform/: __init__.py  lerobot_v21_transformer.py
python/src/: common.rs  lib.rs
python/src/analysis/: mod.rs
python/src/core/: context.rs  metadata.rs  mod.rs
python/src/decode/: mod.rs  video_decoder.rs
python/src/encode/: depth_video_encoder.rs  image_encoder.rs  mod.rs  video_encoder.rs
python/src/enrich/: delta_joint_position_enricher.rs  delta_transform_enricher.rs  hand_command_enricher.rs  head_command_enricher.rs  mod.rs  shift_enricher.rs  tf_buffer_enricher.rs  tf_chain_enricher.rs  uuid_enricher.rs
python/src/export/: mod.rs  parquet_video_exporter.rs
python/src/ingest/: mod.rs  rosbag1_ingestor.rs  rosbag2_ingestor.rs
python/src/merge/: mod.rs
python/src/pipeline/: mod.rs
python/src/synchronize/: mod.rs  nearest_neighbor_time_synchronizer.rs  zero_order_hold_time_synchronizer.rs
python/src/transform/: lerobot_v21_transformer.rs  mod.rs
python/tests/: __init__.py  conftest.py  test_mcap_compatibility.py  test_video_stages.py
python/tests/fixtures/: __init__.py  mcap_generator.py
python/tests/integration/: __init__.py  test_ingest_pipeline.py
python/tests/unit/: __init__.py  test_context.py  test_depth_quantizer.py  test_metadata.py  test_metadata_normalization.py  test_synchronizers.py  test_video_registry_metadata.py
python/tests/unit/analysis/: test_episodes.py  test_segments.py  test_timestamps.py  test_topics.py
rebake/: Cargo.toml
rebake-cli/: Cargo.toml
rebake-cli/src/: error_display.rs  input_utils.rs  main.rs  rosbag_utils.rs
rebake-cli/src/commands/: export.rs  merge.rs  mod.rs
rebake/benches/: lazy_frame_arrow_conversion_benchmark.rs  tf_chain_enricher_benchmark.rs
rebake/src/: common.rs  lib.rs  test_utils.rs
rebake/src/analysis/: mod.rs  segments.rs  timestamps.rs  topics.rs
rebake/src/arrow/: arrow_schema_builder.rs  mod.rs  utils.rs
rebake/src/core/: conversion.rs  error.rs  mod.rs  stage.rs
rebake/src/decode/: mod.rs  video_decoder.rs
rebake/src/encode/: depth_image_encoder.rs  depth_quantizer.rs  depth_video_encoder.rs  ffmpeg_cli.rs  ffmpeg_subprocess.rs  image_encoder.rs  mod.rs  nvenc.rs  video_artifact.rs  video_encoder.rs
rebake/src/encode/compressed_depth/: format.rs  mod.rs  png.rs  rvl.rs  test_support.rs  (+1 more)
rebake/src/enrich/: delta_joint_position_enricher.rs  delta_transform_enricher.rs  hand_command_enricher.rs  head_command_enricher.rs  mod.rs  shift_enricher.rs  tf_buffer_enricher.rs  tf_chain.rs  tf_chain_enricher.rs  trajectory_utils.rs  uuid_enricher.rs
rebake/src/export/: mod.rs  parquet_video_exporter.rs
rebake/src/ingest/: common.rs  mod.rs  parquet_video_ingestor.rs  pipeline.rs  ros_msg_arrow_parser.rs  rosbag1_ingestor.rs  rosbag2_ingestor.rs
rebake/src/merge/: merger.rs  mod.rs  parquet.rs  validation.rs
rebake/src/orchestrator/: mod.rs  orchestrator.rs
rebake/src/pipeline/: mod.rs
rebake/src/ros/: mod.rs  msg_deserializer.rs  schema.rs  schema_type_parser.rs  types.rs
rebake/src/schema/: features.rs  mod.rs
rebake/src/synchronize/: mod.rs  nearest_neighbor_time_synchronizer.rs  synchronize.rs  time_synchronizer.rs  timestamp_merge_time_synchronizer.rs  utils.rs  zero_order_hold_time_synchronizer.rs
rebake/src/testutil/: mcap_generator.rs  mod.rs
rebake/src/transform/: mod.rs
rebake/testdata/msgs/: JointState.msg  JointTrajectory.msg  LaserScan.msg  PointCloud2.msg  ServoState.msg  TFMessage.msg  Twist.msg
rebake/tests/: depth_roundtrip.rs
(+60 files in other folders)
