[workspace]
resolver = "3"
members = ["rebake", "rebake-cli", "python"]

[workspace.package]
version = "0.1.0"
authors = ["AI Robot Association"]
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"

[profile.release]
debug = false

[workspace.lints.clippy]
correctness = { level = "deny", priority = -1 }

suspicious = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }

todo = "warn"
dbg_macro = "warn"
unwrap_used = "warn"
expect_used = "warn"

pedantic = { level = "allow", priority = -1 }
too_many_lines = "allow"
similar_names = "allow"
