[package]
name = "pyrebake"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
name = "_internal"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.26.0", features = ["extension-module", "abi3-py39"] }
rebake = { path = "../rebake" }
arrow = { version = "57.0.0", features = ["pyarrow"] }
arrow-pyarrow = "57.0.0"
camino = "1.2.1"
serde_json = "1"
serde_yaml = "0.9"
image = "0.25.8"
uuid = "1.18"
