[package]
name = "rebake-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
rebake = { path = "../rebake" }
clap = { version = "4.5.4", features = ["derive"] }
serde_yaml = "0.9"
camino = "1.2.1"
anyhow = "1.0"
colored = "2"
walkdir = "2.5"
tracing = "0.1"
tracing-appender = "0.2"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "std"] }
once_cell = "1.19"

[dev-dependencies]
tempfile = "3"
