[package]
name = "rebake"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
arrow = "57.0.0"
arrow-array = { version = "57.0.0", features = ["ffi"] }
arrow-schema = { version = "57.0.0", features = ["ffi"] }
byteorder = "1.5.0"
camino = "1.2.1"
nom = "8.0.0"
paste = "1.0.15"
rosbag = { path = "./third_party/rosbag-rs" }
ffmpeg-next = "8.0.0"
image = "0.25.8"
walkdir = "2.5.0"
polars = {version = "0.51.0", features = ["lazy", "parquet", "polars-ops", "asof_join", "dtype-u8", "dtype-u16", "list_arithmetic", "dtype-array"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = { version = "2.9", features = ["serde"] }
tempfile = "3.23.0"
tokio-util = "0.7.12"
nalgebra = "0.34.1"
polars-arrow = "0.51.0"
serde_yaml = "0.9.34"
typetag = "0.2.21"
thiserror = "1.0"
tracing = "0.1"
rayon = "1.11.0"
mcap = "0.23.4"
memmap2 = "0.9.9"
schemars = {version = "1.1.0", features = ["uuid1"]}
jsonptr = "0.7.1"
uuid = "1.18.1"
serde_arrow = { version = "0.13", features = ["arrow-57"] }

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
polars-testing = "0.51.0"
once_cell = "1.19"
serial_test = "3"

[[bench]]
name = "tf_chain_enricher_benchmark"
harness = false

[[bench]]
name = "lazy_frame_arrow_conversion_benchmark"
harness = false
